--- a/index.html
+++ b/index.html
@@ -696,9 +696,7 @@
                     <i class="fab fa-tiktok" style="color:#000; margin-right: 0.5rem;"></i>
                     TikTok
                 </div>
-                <span class="home-link" style="cursor: not-allowed; opacity: 0.7; color: #aaa !important;">
-                    Soon!
-                </span>
+                <span class="home-link" id="goto-tiktok">TikTok Live Follower Counter</span>
             </div>
         </div>
     </div>
@@ -894,6 +892,67 @@
             </div>
         </div>
     </div>
+    <!-- TikTok container -->
+    <div class="container hidden" id="tiktok-container">
+        <!-- Search card -->
+        <div class="search-card">
+            <h1 class="search-title" style="color:#000;">TikTok Follower Tracker</h1>
+            <p class="search-description">
+                Track real-time follower counts for any TikTok account with beautiful analytics.
+            </p>
+            <div class="search-form">
+                <input type="text" 
+                       class="search-input" 
+                       id="tiktok-input" 
+                       placeholder="Enter TikTok username"
+                       onkeypress="handleTikTokKeyPress(event)">
+                <button class="search-button" style="background: linear-gradient(135deg,#000,#ff0050);" onclick="fetchTikTokData()">
+                    <i class="fab fa-tiktok"></i>
+                    Search
+                </button>
+            </div>
+            <div class="loader" id="tiktok-loader">
+                <div class="loader-circle"></div>
+                <div class="loader-circle"></div>
+            </div>
+        </div>
+        <!-- Results container -->
+        <div class="results-container" id="tiktok-results-container">
+            <h2 class="results-title">Search Results</h2>
+            <div class="results-grid" id="tiktok-results-grid"></div>
+        </div>
+        <!-- Counter container -->
+        <div class="counter-container" id="tiktok-counter-container">
+            <div class="channel-header">
+                <img src="" alt="TikTok Avatar" class="channel-avatar-lg" id="tiktok-avatar">
+                <h2 class="channel-name-lg" id="tiktok-name"></h2>
+                <p class="subscriber-label">Followers</p>
+                <div class="odometer" id="tiktok-follower-count">0</div>
+            </div>
+            <div class="counter-actions">
+                <div class="share-dropdown">
+                    <button class="action-button share-button" style="background: linear-gradient(135deg,#000,#ff0050);" onclick="toggleTikTokShareOptions()">
+                        <i class="fas fa-share-alt"></i>
+                        Share
+                    </button>
+                    <div class="share-options" id="tiktok-share-options">
+                        <div class="share-option" onclick="shareTikTokOnTwitter()">
+                            <i class="fab fa-twitter"></i>
+                            Twitter
+                        </div>
+                        <div class="share-option" onclick="copyTikTokLink()">
+                            <i class="fas fa-link"></i>
+                            Copy Link
+                        </div>
+                    </div>
+                </div>
+                <button class="action-button minimal-button" onclick="activateTikTokMinimalMode()">
+                    <i class="fas fa-minimize"></i>
+                    Minimal Mode
+                </button>
+            </div>
+        </div>
+    </div>
     <!-- Footer -->
     <footer class="footer hidden" id="main-footer">
         FastCount v3.1 • Real-time Analytics • © 2025
@@ -905,6 +964,7 @@
         let channelId, intervalId, odometer;
         let twitterId, twitterIntervalId, twitterOdometer;
         let instagramId, instagramIntervalId, instagramOdometer;
+        let tiktokId, tiktokIntervalId, tiktokOdometer, tiktokAvatar, tiktokName, tiktokUid;
 
         function initParticles() {
             const particlesContainer = document.getElementById('particles');
@@ -1078,6 +1138,13 @@
             window.history.pushState({}, '', currentUrl);
         }
 
+        function activateTikTokMinimalMode() {
+            document.body.classList.add('minimal-mode');
+            const currentUrl = new URL(window.location.href);
+            currentUrl.searchParams.set('minimal', 'true');
+            window.history.pushState({}, '', currentUrl);
+        }
+
         function checkMinimalMode() {
             const params = new URLSearchParams(window.location.search);
             if (params.get('minimal') === 'true') {
@@ -1099,6 +1166,14 @@
             if (params.get('minimal') === 'true') {
                 document.body.classList.add('minimal-mode');
                 document.getElementById("instagram-counter-container").style.display = "block";
+            }
+        }
+
+        function checkTikTokMinimalMode() {
+            const params = new URLSearchParams(window.location.search);
+            if (params.get('minimal') === 'true') {
+                document.body.classList.add('minimal-mode');
+                document.getElementById("tiktok-counter-container").style.display = "block";
             }
         }
 
@@ -1143,6 +1218,12 @@
                 !event.target.closest('.share-options')) {
                 instagramShareOptions.style.display = 'none';
             }
+            const tiktokShareOptions = document.getElementById('tiktok-share-options');
+            if (tiktokShareOptions && tiktokShareOptions.style.display === 'block' &&
+                !event.target.closest('.share-dropdown') &&
+                !event.target.closest('.share-options')) {
+                tiktokShareOptions.style.display = 'none';
+            }
         });
 
         function getChannelIdFromPath() {
@@ -1160,6 +1241,12 @@
         function getInstagramIdFromPath() {
             const path = window.location.pathname.replace(/\/+$/, '');
             const match = path.match(/\/instagram\/([^\/]+)/);
+            return match ? match[1] : null;
+        }
+
+        function getTikTokIdFromPath() {
+            const path = window.location.pathname.replace(/\/+$/, '');
+            const match = path.match(/\/tiktok\/([^\/]+)/);
             return match ? match[1] : null;
         }
 
@@ -1271,10 +1358,62 @@
             ) {
                 window.location.replace('/instagram/' + window.location.hash.substring(1));
             }
+            else if (path.replace(/\/+$/, '') === '/tiktok') {
+                showTikTok();
+                document.getElementById("tiktok-container").classList.remove('hidden');
+                document.getElementById("main-container").classList.add('hidden');
+                document.getElementById("main-header").classList.remove('hidden');
+                document.getElementById("main-footer").classList.remove('hidden');
+                document.getElementById("tiktok-counter-container").style.display = "none";
+                document.getElementById("tiktok-results-container").style.display = "none";
+                document.querySelector("#tiktok-container .search-card").style.display = "block";
+                checkTikTokMinimalMode();
+            }
+            else if (/\/tiktok\/[^\/]+$/.test(path)) {
+                showTikTok();
+                document.getElementById("tiktok-container").classList.remove('hidden');
+                document.getElementById("main-container").classList.add('hidden');
+                document.getElementById("main-header").classList.remove('hidden');
+                document.getElementById("main-footer").classList.remove('hidden');
+                const tiktokIdFromUrl = getTikTokIdFromPath();
+                if (tiktokIdFromUrl) {
+                    tiktokId = tiktokIdFromUrl;
+                    // fetch UID and avatar/name
+                    fetch(`https://api-v2.nextcounts.com/api/search/tiktok/user/${encodeURIComponent(tiktokId)}`)
+                        .then(res => res.json())
+                        .then(data => {
+                            if (data.users && data.users.length > 0) {
+                                const user = data.users.find(u => u.userIdentifier === tiktokId) || data.users[0];
+                                tiktokUid = user.uid;
+                                tiktokAvatar = user.avatar;
+                                tiktokName = user.username;
+                                updateTikTokHeader(user);
+                                showTikTokCounter();
+                                fetchTikTokStats();
+                                clearInterval(tiktokIntervalId);
+                                tiktokIntervalId = setInterval(fetchTikTokStats, 2000);
+                            }
+                        });
+                }
+                checkTikTokMinimalMode();
+            }
+            else if (
+                (path === '' || path === '/') &&
+                window.location.hash.startsWith('#/tiktok/')
+            ) {
+                window.location.replace(window.location.hash.slice(1));
+            }
+            else if (
+                (path === '' || path === '/') &&
+                window.location.hash.length > 1
+            ) {
+                window.location.replace('/tiktok/' + window.location.hash.substring(1));
+            }
             else {
                 showHome();
                 document.getElementById("twitter-container").classList.add('hidden');
                 document.getElementById("instagram-container").classList.add('hidden');
+                document.getElementById("tiktok-container").classList.add('hidden');
             }
         }
 
@@ -1302,6 +1441,12 @@
             document.getElementById('main-header').classList.remove('hidden');
             document.getElementById('main-footer').classList.remove('hidden');
         }
+        function showTikTok() {
+            document.getElementById('home-block').classList.add('hidden');
+            document.getElementById('tiktok-container').classList.remove('hidden');
+            document.getElementById('main-header').classList.remove('hidden');
+            document.getElementById('main-footer').classList.remove('hidden');
+        }
 
         document.addEventListener('DOMContentLoaded', function() {
             const goto = document.getElementById('goto-youtube');
@@ -1322,6 +1467,13 @@
             if (gotoInstagram) {
                 gotoInstagram.addEventListener('click', function() {
                     window.history.pushState({}, '', '/instagram');
+                    handleRoute();
+                });
+            }
+            const gotoTikTok = document.getElementById('goto-tiktok');
+            if (gotoTikTok) {
+                gotoTikTok.addEventListener('click', function() {
+                    window.history.pushState({}, '', '/tiktok');
                     handleRoute();
                 });
             }
@@ -1566,6 +1718,146 @@
                 .then(() => {
                     showAlert("Link copied to clipboard!");
                     document.getElementById("instagram-share-options").style.display = "none";
+                })
+                .catch(() => showAlert("Failed to copy link. Please try again."));
+        }
+
+        // TikTok handlers
+        window.handleTikTokKeyPress = function(event) {
+            if (event.key === "Enter") {
+                window.fetchTikTokData();
+            }
+        };
+
+        window.fetchTikTokData = async function() {
+            const username = document.getElementById("tiktok-input").value.trim();
+            if (!username) {
+                showAlert("Please enter a TikTok username");
+                return;
+            }
+            const loader = document.getElementById("tiktok-loader");
+            const resultsContainer = document.getElementById("tiktok-results-container");
+            const resultsGrid = document.getElementById("tiktok-results-grid");
+            loader.style.display = "block";
+            resultsContainer.style.display = "none";
+            resultsGrid.innerHTML = "";
+            try {
+                const response = await fetch(`https://api-v2.nextcounts.com/api/search/tiktok/user/${encodeURIComponent(username)}`);
+                const data = await response.json();
+                loader.style.display = "none";
+                if (!data.users || data.users.length === 0) {
+                    showAlert("No TikTok accounts found. Please try another name.");
+                    return;
+                }
+                displayTikTokResults(data.users);
+                resultsContainer.style.display = "block";
+                resultsContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
+            } catch (error) {
+                loader.style.display = "none";
+                showAlert("An error occurred during TikTok search.");
+            }
+        };
+
+        function displayTikTokResults(accounts) {
+            const resultsGrid = document.getElementById("tiktok-results-grid");
+            resultsGrid.innerHTML = "";
+            accounts.forEach(account => {
+                // account: {username, userIdentifier, avatar, verified, uid, followers}
+                const card = document.createElement('div');
+                card.className = 'channel-card';
+                card.innerHTML = `
+                    <img src="${account.avatar || 'https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png'}" alt="${account.username}" class="channel-avatar">
+                    <div class="channel-info">
+                        <div class="channel-name">${account.username}${account.verified ? ' <i class="fas fa-check-circle" style="color:#4f8cff;font-size:1em;"></i>' : ''}</div>
+                        <div class="channel-id">@${account.userIdentifier}</div>
+                    </div>
+                `;
+                card.addEventListener('click', () => {
+                    tiktokId = account.userIdentifier;
+                    tiktokUid = account.uid;
+                    tiktokAvatar = account.avatar;
+                    tiktokName = account.username;
+                    const newUrl = `/tiktok/${tiktokId}`;
+                    window.history.pushState({}, '', newUrl);
+                    showTikTokCounter();
+                    clearInterval(tiktokIntervalId);
+                    fetchTikTokStats();
+                    tiktokIntervalId = setInterval(fetchTikTokStats, 2000);
+                });
+                resultsGrid.appendChild(card);
+            });
+        }
+
+        function showTikTokCounter() {
+            document.getElementById("tiktok-counter-container").style.display = "block";
+            document.getElementById("tiktok-results-container").style.display = "none";
+            document.querySelector("#tiktok-container .search-card").style.display = "none";
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+
+        function fetchTikTokStats() {
+            const id = getTikTokIdFromPath() || tiktokId;
+            const uid = tiktokUid || window.tiktokUidFromUrl;
+            // If not already set, fetch user info to get UID
+            if (!uid) {
+                // fallback: search again to get UID
+                fetch(`https://api-v2.nextcounts.com/api/search/tiktok/user/${encodeURIComponent(id)}`)
+                    .then(res => res.json())
+                    .then(data => {
+                        if (data.users && data.users.length > 0) {
+                            const user = data.users.find(u => u.userIdentifier === id) || data.users[0];
+                            tiktokUid = user.uid;
+                            tiktokAvatar = user.avatar;
+                            tiktokName = user.username;
+                            updateTikTokHeader(user);
+                            fetchTikTokStats();
+                        }
+                    });
+                return;
+            }
+            fetch(`https://api-v2.nextcounts.com/api/tiktok/user/stats/${uid}`)
+                .then(res => res.json())
+                .then(data => {
+                    updateTikTokHeader({avatar: tiktokAvatar, username: tiktokName});
+                    const followers = data.followers || 0;
+                    if (!tiktokOdometer) {
+                        tiktokOdometer = new Odometer({
+                            el: document.getElementById("tiktok-follower-count"),
+                            value: followers,
+                            format: '(,ddd)',
+                            theme: 'minimal'
+                        });
+                    } else {
+                        tiktokOdometer.update(followers);
+                    }
+                })
+                .catch(() => {});
+        }
+
+        function updateTikTokHeader(user) {
+            document.getElementById("tiktok-avatar").src = user.avatar || 'https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png';
+            document.getElementById("tiktok-name").textContent = user.username || "";
+        }
+
+        function toggleTikTokShareOptions() {
+            const options = document.getElementById("tiktok-share-options");
+            options.style.display = options.style.display === "block" ? "none" : "block";
+        }
+
+        function shareTikTokOnTwitter() {
+            const name = document.getElementById("tiktok-name").textContent || "TikTok";
+            const count = document.getElementById("tiktok-follower-count").textContent || "0";
+            const text = `Check out ${name}'s TikTok follower count: ${count} on @FastCount!`;
+            const url = window.location.href;
+            window.open(`https://twitter.com/intent/tweet?text=${encodeURIComponent(text)}&url=${encodeURIComponent(url)}`, '_blank');
+            document.getElementById("tiktok-share-options").style.display = "none";
+        }
+
+        function copyTikTokLink() {
+            navigator.clipboard.writeText(window.location.href)
+                .then(() => {
+                    showAlert("Link copied to clipboard!");
+                    document.getElementById("tiktok-share-options").style.display = "none";
                 })
                 .catch(() => showAlert("Failed to copy link. Please try again."));
         }
