--- a/index.html
+++ b/index.html
@@ -662,6 +662,17 @@
     </style>
 </head>
 <body class="dark-mode">
+    <!-- Gros logo et titre FastCount ajouté -->
+    <div style="width:100%;text-align:center;padding-top:2.5rem;">
+        <span style="font-size:3.2rem;font-weight:900;letter-spacing:2px;color:#4f8cff;display:inline-flex;align-items:center;gap:1rem;">
+            <i class="fas fa-chart-line" style="font-size:3.2rem;color:#4f8cff;"></i>
+            FastCount
+        </span>
+    </div>
+    <!-- Texte d'accueil ajouté -->
+    <div style="width:100%;text-align:center;padding:2rem 0 1rem 0;font-size:1.35rem;font-weight:600;color:#4f8cff;letter-spacing:1px;">
+        Suivez en temps réel les abonnés et followers de vos réseaux sociaux préférés !
+    </div>
     <!-- Floating particles background -->
     <div class="particles" id="particles"></div>
     
