--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
     </div>
     <!-- Texte d'accueil ajouté -->
     <div style="width:100%;text-align:center;padding:2rem 0 1rem 0;font-size:1.35rem;font-weight:600;color:#4f8cff;letter-spacing:1px;">
-        Suivez en temps réel les abonnés et followers de vos réseaux sociaux préférés !
+        Track subscribers and followers on your favorite social networks in real time!
     </div>
     <!-- Floating particles background -->
     <div class="particles" id="particles"></div>
