--- a/index.html
+++ b/index.html
@@ -744,6 +744,55 @@
                 <div class="loader-circle"></div>
             </div>
         </div>
+        <!-- Bloc ajouté : YouTube Live View Counter -->
+        <div class="search-card" style="margin-top:2rem;">
+            <h1 class="search-title">YouTube Live View Counter</h1>
+            <p class="search-description">
+                Affichez en temps réel le nombre de vues, de likes et de commentaires d'une vidéo YouTube.
+            </p>
+            <div class="search-form">
+                <input type="text"
+                       class="search-input"
+                       id="ytvideo-input"
+                       placeholder="Entrez le nom ou le lien d'une vidéo YouTube"
+                       onkeypress="handleYTVideoKeyPress(event)">
+                <button class="search-button" onclick="fetchYTVideoData()">
+                    <i class="fas fa-search"></i>
+                    Rechercher
+                </button>
+            </div>
+            <div class="loader" id="ytvideo-loader" style="display:none;">
+                <div class="loader-circle"></div>
+                <div class="loader-circle"></div>
+            </div>
+        </div>
+        <!-- Résultats recherche vidéo -->
+        <div class="results-container" id="ytvideo-results-container" style="display:none;">
+            <h2 class="results-title">Résultats vidéos</h2>
+            <div class="results-grid" id="ytvideo-results-grid"></div>
+        </div>
+        <!-- Compteur vidéo -->
+        <div class="counter-container" id="ytvideo-counter-container" style="display:none;">
+            <div class="channel-header">
+                <img src="" alt="Miniature vidéo" class="channel-avatar-lg" id="ytvideo-avatar">
+                <h2 class="channel-name-lg" id="ytvideo-title"></h2>
+                <p class="subscriber-label">Statistiques en temps réel</p>
+                <div style="display:flex;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
+                    <div style="text-align:center;">
+                        <div style="font-size:1.1rem;color:#94a3b8;margin-bottom:0.3rem;">Vues</div>
+                        <div class="odometer" id="ytvideo-views">0</div>
+                    </div>
+                    <div style="text-align:center;">
+                        <div style="font-size:1.1rem;color:#94a3b8;margin-bottom:0.3rem;">Likes</div>
+                        <div class="odometer" id="ytvideo-likes">0</div>
+                    </div>
+                    <div style="text-align:center;">
+                        <div style="font-size:1.1rem;color:#94a3b8;margin-bottom:0.3rem;">Commentaires</div>
+                        <div class="odometer" id="ytvideo-comments">0</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Results container -->
         <div class="results-container" id="results-container">
             <h2 class="results-title">Search Results</h2>
@@ -971,6 +1020,135 @@
     <!-- Odometer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js"></script>
     <script>
+        // Global variables
+        let channelId, intervalId, odometer;
+        let twitterId, twitterIntervalId, twitterOdometer;
+        let instagramId, instagramIntervalId, instagramOdometer;
+        let tiktokId, tiktokIntervalId, tiktokOdometer, tiktokAvatar, tiktokName, tiktokUid;
+
+        // --- Variables pour le compteur vidéo YouTube ---
+        let ytvideoId, ytvideoIntervalId, ytvideoOdoViews, ytvideoOdoLikes, ytvideoOdoComments;
+
+        // Gestion touche entrée pour la recherche vidéo
+        function handleYTVideoKeyPress(event) {
+            if (event.key === "Enter") {
+                fetchYTVideoData();
+            }
+        }
+
+        // Recherche vidéo YouTube
+        async function fetchYTVideoData() {
+            const query = document.getElementById("ytvideo-input").value.trim();
+            if (!query) {
+                showAlert("Veuillez entrer un nom ou un lien de vidéo YouTube");
+                return;
+            }
+            const loader = document.getElementById("ytvideo-loader");
+            const resultsContainer = document.getElementById("ytvideo-results-container");
+            const resultsGrid = document.getElementById("ytvideo-results-grid");
+            loader.style.display = "block";
+            resultsContainer.style.display = "none";
+            resultsGrid.innerHTML = "";
+            try {
+                const response = await fetch(`https://mixerno.space/api/youtube-video-counter/search/${encodeURIComponent(query)}`);
+                const data = await response.json();
+                loader.style.display = "none";
+                if (!data.list || data.list.length === 0) {
+                    showAlert("Aucune vidéo trouvée. Essayez un autre nom.");
+                    return;
+                }
+                displayYTVideoResults(data.list);
+                resultsContainer.style.display = "block";
+                resultsContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
+            } catch (error) {
+                loader.style.display = "none";
+                showAlert("Erreur lors de la recherche vidéo.");
+            }
+        }
+
+        // Affichage résultats vidéos
+        function displayYTVideoResults(videos) {
+            const resultsGrid = document.getElementById("ytvideo-results-grid");
+            resultsGrid.innerHTML = "";
+            videos.forEach(video => {
+                // video = [titre, miniature, id]
+                const card = document.createElement('div');
+                card.className = 'channel-card';
+                card.innerHTML = `
+                    <img src="${video[1] || ''}" alt="${video[0]}" class="channel-avatar">
+                    <div class="channel-info">
+                        <div class="channel-name">${video[0]}</div>
+                        <div class="channel-id">${video[2]}</div>
+                    </div>
+                `;
+                card.addEventListener('click', () => {
+                    ytvideoId = video[2];
+                    showYTVideoCounter();
+                    clearInterval(ytvideoIntervalId);
+                    fetchYTVideoStats();
+                    ytvideoIntervalId = setInterval(fetchYTVideoStats, 2000);
+                });
+                resultsGrid.appendChild(card);
+            });
+        }
+
+        // Affiche le compteur vidéo
+        function showYTVideoCounter() {
+            document.getElementById("ytvideo-counter-container").style.display = "block";
+            document.getElementById("ytvideo-results-container").style.display = "none";
+            document.querySelector("#main-container .search-card:nth-of-type(2)").style.display = "none";
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+
+        // Récupère stats vidéo
+        async function fetchYTVideoStats() {
+            const id = ytvideoId;
+            if (!id) return;
+            try {
+                const response = await fetch(`https://mixerno.space/api/youtube-video-counter/user/${id}`);
+                const data = await response.json();
+                // Trouver les valeurs
+                const views = (data.counts.find(c => c.value === "views") || {}).count || 0;
+                const likes = (data.counts.find(c => c.value === "likes") || {}).count || 0;
+                const comments = (data.counts.find(c => c.value === "comments") || {}).count || 0;
+                const name = (data.user.find(u => u.value === "name") || {}).count || "";
+                const pfp = (data.user.find(u => u.value === "pfp") || {}).count || "";
+                document.getElementById("ytvideo-avatar").src = pfp;
+                document.getElementById("ytvideo-title").textContent = name;
+                // Odometer
+                if (!ytvideoOdoViews) {
+                    ytvideoOdoViews = new Odometer({
+                        el: document.getElementById("ytvideo-views"),
+                        value: views,
+                        format: '(,ddd)',
+                        theme: 'minimal'
+                    });
+                } else {
+                    ytvideoOdoViews.update(views);
+                }
+                if (!ytvideoOdoLikes) {
+                    ytvideoOdoLikes = new Odometer({
+                        el: document.getElementById("ytvideo-likes"),
+                        value: likes,
+                        format: '(,ddd)',
+                        theme: 'minimal'
+                    });
+                } else {
+                    ytvideoOdoLikes.update(likes);
+                }
+                if (!ytvideoOdoComments) {
+                    ytvideoOdoComments = new Odometer({
+                        el: document.getElementById("ytvideo-comments"),
+                        value: comments,
+                        format: '(,ddd)',
+                        theme: 'minimal'
+                    });
+                } else {
+                    ytvideoOdoComments.update(comments);
+                }
+            } catch (e) {}
+        }
+        /* --- CODE EXISTANT --- */
         // Global variables
         let channelId, intervalId, odometer;
         let twitterId, twitterIntervalId, twitterOdometer;
@@ -1671,8 +1849,8 @@
                     const newUrl = `/instagram/${instagramId}`;
                     window.history.pushState({}, '', newUrl);
                     showInstagramCounter();
-                    clearInterval(instagramIntervalId);
                     fetchInstagramStats();
+                    clearInterval(instagramIntervalId);
                     instagramIntervalId = setInterval(fetchInstagramStats, 2000);
                 });
                 resultsGrid.appendChild(card);
