--- a/index.html
+++ b/index.html
@@ -745,20 +745,20 @@
             </div>
         </div>
         <!-- Bloc ajouté : YouTube Live View Counter -->
-        <div class="search-card" style="margin-top:2rem;">
+        <div class="search-card" style="margin-top:1.5rem;">
             <h1 class="search-title">YouTube Live View Counter</h1>
             <p class="search-description">
-                Affichez en temps réel le nombre de vues, de likes et de commentaires d'une vidéo YouTube.
+                Track real-time views, likes and comments for any YouTube video.
             </p>
             <div class="search-form">
                 <input type="text"
                        class="search-input"
                        id="ytvideo-input"
-                       placeholder="Entrez le nom ou le lien d'une vidéo YouTube"
+                       placeholder="Enter YouTube video title"
                        onkeypress="handleYTVideoKeyPress(event)">
                 <button class="search-button" onclick="fetchYTVideoData()">
                     <i class="fas fa-search"></i>
-                    Rechercher
+                    Search
                 </button>
             </div>
             <div class="loader" id="ytvideo-loader" style="display:none;">
@@ -766,28 +766,28 @@
                 <div class="loader-circle"></div>
             </div>
         </div>
-        <!-- Résultats recherche vidéo -->
+        <!-- Résultats de recherche vidéo -->
         <div class="results-container" id="ytvideo-results-container" style="display:none;">
-            <h2 class="results-title">Résultats vidéos</h2>
+            <h2 class="results-title">Video Search Results</h2>
             <div class="results-grid" id="ytvideo-results-grid"></div>
         </div>
         <!-- Compteur vidéo -->
         <div class="counter-container" id="ytvideo-counter-container" style="display:none;">
             <div class="channel-header">
-                <img src="" alt="Miniature vidéo" class="channel-avatar-lg" id="ytvideo-avatar">
+                <img src="" alt="Video Thumbnail" class="channel-avatar-lg" id="ytvideo-thumbnail">
                 <h2 class="channel-name-lg" id="ytvideo-title"></h2>
-                <p class="subscriber-label">Statistiques en temps réel</p>
-                <div style="display:flex;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
+                <p class="subscriber-label">Live Video Stats</p>
+                <div style="display:flex;justify-content:center;gap:2.5rem;">
                     <div style="text-align:center;">
-                        <div style="font-size:1.1rem;color:#94a3b8;margin-bottom:0.3rem;">Vues</div>
+                        <div style="color:var(--primary);font-weight:700;">Views</div>
                         <div class="odometer" id="ytvideo-views">0</div>
                     </div>
                     <div style="text-align:center;">
-                        <div style="font-size:1.1rem;color:#94a3b8;margin-bottom:0.3rem;">Likes</div>
+                        <div style="color:var(--primary);font-weight:700;">Likes</div>
                         <div class="odometer" id="ytvideo-likes">0</div>
                     </div>
                     <div style="text-align:center;">
-                        <div style="font-size:1.1rem;color:#94a3b8;margin-bottom:0.3rem;">Commentaires</div>
+                        <div style="color:var(--primary);font-weight:700;">Comments</div>
                         <div class="odometer" id="ytvideo-comments">0</div>
                     </div>
                 </div>
@@ -1015,7 +1015,7 @@
     </div>
     <!-- Footer -->
     <footer class="footer hidden" id="main-footer">
-        FastCount v4.0 • Real-time Analytics • © 2025
+        FastCount  • Real-time Analytics • © 2025
     </footer>
     <!-- Odometer -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js"></script>
@@ -1025,88 +1025,9 @@
         let twitterId, twitterIntervalId, twitterOdometer;
         let instagramId, instagramIntervalId, instagramOdometer;
         let tiktokId, tiktokIntervalId, tiktokOdometer, tiktokAvatar, tiktokName, tiktokUid;
+        // --- YouTube Video Counter ---
+        let ytvideoId, ytvideoIntervalId, ytvideoOdometerViews, ytvideoOdometerLikes, ytvideoOdometerComments;
 
-        // --- Variables pour le compteur vidéo YouTube ---
-        let ytvideoId, ytvideoIntervalId, ytvideoOdoViews, ytvideoOdoLikes, ytvideoOdoComments;
-
-        // Gestion touche entrée pour la recherche vidéo
-        function handleYTVideoKeyPress(event) {
-            if (event.key === "Enter") {
-                fetchYTVideoData();
-            }
-        }
-
-        // Recherche vidéo YouTube
-        async function fetchYTVideoData() {
-            const query = document.getElementById("ytvideo-input").value.trim();
-            if (!query) {
-                showAlert("Veuillez entrer un nom ou un lien de vidéo YouTube");
-                return;
-            }
-            const loader = document.getElementById("ytvideo-loader");
-            const resultsContainer = document.getElementById("ytvideo-results-container");
-            const resultsGrid = document.getElementById("ytvideo-results-grid");
-            loader.style.display = "block";
-            resultsContainer.style.display = "none";
-            resultsGrid.innerHTML = "";
-            try {
-                const response = await fetch(`https://mixerno.space/api/youtube-video-counter/search/${encodeURIComponent(query)}`);
-                const data = await response.json();
-                loader.style.display = "none";
-                if (!data.list || data.list.length === 0) {
-                    showAlert("Aucune vidéo trouvée. Essayez un autre nom.");
-                    return;
-                }
-                displayYTVideoResults(data.list);
-                resultsContainer.style.display = "block";
-                resultsContainer.scrollIntoView({ behavior: 'smooth', block: 'start' });
-            } catch (error) {
-                loader.style.display = "none";
-                showAlert("Erreur lors de la recherche vidéo.");
-            }
-        }
-
-        // Affichage résultats vidéos
-        function displayYTVideoResults(videos) {
-            const resultsGrid = document.getElementById("ytvideo-results-grid");
-            resultsGrid.innerHTML = "";
-            // Toujours masquer le compteur avant d'afficher les résultats
-            document.getElementById("ytvideo-counter-container").style.display = "none";
-            videos.forEach(video => {
-                // video = [titre, miniature, id]
-                const card = document.createElement('div');
-                card.className = 'channel-card';
-                card.innerHTML = `
-                    <img src="${video[1] || ''}" alt="${video[0]}" class="channel-avatar">
-                    <div class="channel-info">
-                        <div class="channel-name">${video[0]}</div>
-                        <div class="channel-id">${video[2]}</div>
-                    </div>
-                `;
-                card.addEventListener('click', () => {
-                    ytvideoId = video[2];
-                    showYTVideoCounter();
-                    clearInterval(ytvideoIntervalId);
-                    fetchYTVideoStats();
-                    ytvideoIntervalId = setInterval(fetchYTVideoStats, 2000);
-                });
-                resultsGrid.appendChild(card);
-            });
-        }
-
-        // Affiche le compteur vidéo
-        function showYTVideoCounter() {
-            // Affiche le compteur
-            document.getElementById("ytvideo-counter-container").style.display = "block";
-            // Masque les résultats vidéo
-            document.getElementById("ytvideo-results-container").style.display = "none";
-            // Masque la carte de recherche vidéo
-            document.querySelector("#main-container .search-card:nth-of-type(2)").style.display = "none";
-            // S'assure que le compteur est bien visible
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        }
-
-        /* --- CODE EXISTANT --- */
         function initParticles() {
             const particlesContainer = document.getElementById('particles');
             const particleCount = window.innerWidth < 768 ? 20 : 50;
@@ -1801,8 +1722,8 @@
                     const newUrl = `/instagram/${instagramId}`;
                     window.history.pushState({}, '', newUrl);
                     showInstagramCounter();
-                    fetchInstagramStats();
                     clearInterval(instagramIntervalId);
+                    fetchInstagramStats();
                     instagramIntervalId = setInterval(fetchInstagramStats, 2000);
                 });
                 resultsGrid.appendChild(card);
